--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -25,13 +25,48 @@
             android:textSize="35sp"
             android:textStyle="normal" />
 
+        <LinearLayout
+            android:padding="5dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="70dp"
+            android:orientation="horizontal"
+            android:id="@+id/layoutPhone">
+
+            <com.hbb20.CountryCodePicker
+                android:id="@+id/ccp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:padding="5dp"
+                android:gravity="center"/>
+
+            <EditText
+                android:id="@+id/phoneNo"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:hint="@string/mobileNumber"
+                android:inputType="number"
+                android:ems="10"
+                android:textColorHint="@color/black"
+                android:textSize="20dp"
+                android:text=""
+                android:textAlignment="center"/>
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/loginSignupBtn"
             style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="50dp"
             android:background="@drawable/main_button_pattern"
             android:text="@string/loginSignupTxt"
