--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="butnBack">#00F44336</color>
     <color name="transparent">#00F44336</color>
     <color name="thirdColor">#1d2951</color>
+    <color name="fourthColor">#FFFFFF</color>
 </resources>
