Car Parking UIs 3rd Commit

--- a/app/src/main/res/layout/activity_google_map_location.xml
+++ b/app/src/main/res/layout/activity_google_map_location.xml
@@ -19,8 +19,7 @@
             android:id="@+id/toolBar"
             layout="@layout/activity_toolbar" />
 
-        <include
-            layout="@layout/activity_bottom_bar" />
+        <include layout="@layout/content_map" />
 
     </LinearLayout>
 
